Publish articles and some small changes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
 
     <h1 class="page-header">Home</h1>
     <div class="articles-list">
-        <a>
-            <h1>Artikel Titel</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl nunc mi ipsum faucibus vitae. Integer...</p>
+        <a href="/articles/sham-democracy.html">
+            <h1>Sham Democracy</h1>
+            <p> 
+                Our university keeps up the appearance of democracy, but in reality operates in fundamentally undemocratic ways. In the article before you, Knokpartij’s list leader Koen de Kooter explains how this came about, what the situation is like now and how we can move forward.
+            </p>
+        </a>
+        <a href="/articles/the-impossibility-of-the-ivory-tower.html">
+            <h1>The impossibility of the ivory tower</h1>
+            <p> 
+                The undemocratic structures, the education methods the university employs, and the refusal of the university to make decisions it deems too political, show us that the university is an institution which is widely impacted by the world around it. That the ivory tower of education and research is not only undesirable, but also impossible.
+            </p>
         </a>
     </div>
 
