fix controversial spelling of antisemitism

--- a/programma.html
+++ b/programma.html
@@ -219,7 +219,7 @@
         <h3>A responsible university:</h3>
         <ul>
             <li>
-                Recognizes and takes active responsibility for social issues, locally, nationally, and globally, strongly speaking out against oppression and exploitation such as sexism, racism, Islamophobia, anti-Semitism, homophobia, and transphobia;
+                Recognizes and takes active responsibility for social issues, locally, nationally, and globally, strongly speaking out against oppression and exploitation such as sexism, racism, Islamophobia, antisemitism, homophobia, and transphobia;
             </li>
             <li>
                 Advocates at both national and local levels for more student housing, abolition of tuition fees, and an increase in the basic grant;
