--- a/lijst.html
+++ b/lijst.html
@@ -47,9 +47,9 @@
         <div class="list-entry">
             <h2>3. Jannes Kruidenier</h2>
             <p>
-                <b>Opleiding:</b>
+                <b>Opleiding: Arts and Culture Studies</b>
                 <br>
-                <b>Faculteit:</b> 
+                <b>Faculteit: Letteren</b> 
             </p>
             <p>
                 <b></b>
@@ -293,9 +293,9 @@
         <div class="list-entry">
             <h2>3. Jannes Kruidenier</h2>
             <p>
-                <b>Study:</b>
+                <b>Study: Arts and Culture Studies</b>
                 <br>
-                <b>Faculty:</b> 
+                <b>Faculty: Arts</b> 
             </p>
             <p>
                 <b></b>
