--- a/programma.html
+++ b/programma.html
@@ -283,7 +283,7 @@
                 Opens bachelor's enrollment to everyone and abolishes numerus fixus;
             </li>
             <li>
-                Publishes only in <i>open access</i>.
+                Publishes only <i>open access</i>.
             </li>
         </ul>
     </div>
