--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header-component></header-component>
 
     <h1 class="page-header">Home</h1>
+    <h2 class="undertitle">Articles</h2>
     <div class="articles-list">
         <a href="/articles/sham-democracy.html">
             <h1>Sham Democracy</h1>
