--- a/lijst.html
+++ b/lijst.html
@@ -200,7 +200,7 @@
             <p>
                 <b>Knokken voor democratie op de unie</b>
                 <br>
-                Na nog niet eens een jaar aan de Radboud te studeren is mij al duidelijk hoe de vork in de steel steekt. Om de schijn van democratie te houden is er de USR, een raad diens besluiten structureel genegeerd worden door het College van bestuur. Genocidale universiteiten zijn klaarblijkelijk onze grootste vrienden. De inclusiviteit die wordt nagestreefd leidt onder de aanwezigheid van discriminerende studentenverenigingen die op de Radboud vrij baan krijgen. Hier moet verandering in komen. Daarom knokken wij als partij om deze problemen voor eens en voor altijd de wereld uit te helpen.
+                Na nog niet eens een jaar aan de Radboud te studeren is mij al duidelijk hoe de vork in de steel steekt. Om de schijn van democratie te houden is er de USR, een raad diens besluiten structureel genegeerd worden door het College van bestuur. Genocidale universiteiten zijn klaarblijkelijk onze grootste vrienden. De inclusiviteit die wordt nagestreefd lijdt onder de aanwezigheid van discriminerende studentenverenigingen die op de Radboud vrij baan krijgen. Hier moet verandering in komen. Daarom knokken wij als partij om deze problemen voor eens en voor altijd de wereld uit te helpen.
             </p>
         </div>
         <br>
